--- a/package.json
+++ b/package.json
@@ -9,20 +9,33 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
-    "@types/react-select": "3.0.20",
-    "@types/recharts": "1.8.16",
-    "mobx": "6.3.3",
-    "mobx-react-lite": "3.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "react-select": "3.1.0",
-    "recharts": "1.8.5"
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@hapi/bourne": "^2.0.0",
+    "@mui/material": "^5.0.6",
+    "@types/react-select": "^5.0.1",
+    "@types/recharts": "1.8.23",
+    "ansi-html": "^0.0.7",
+    "ansi-regex": "^6.0.1",
+    "braces": "^3.0.2",
+    "mobx": "6.3.6",
+    "mobx-react-lite": "3.2.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
+    "react-select": "5.2.0",
+    "recharts": "2.1.6"
+  },
+  "eslintConfig": {
+    "parser": "@typescript-eslint/parser"
   },
   "devDependencies": {
-    "@types/react": "16.9.19",
-    "@types/react-dom": "16.9.5",
-    "typescript": "3.7.5"
+    "@types/react": "17.0.34",
+    "@types/react-dom": "17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^7.11.0",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
